[project]
name = "moqt"
version = "0.1.0"
description = "Python implementation of the MOQT protocol"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "gmarzot@marzresearch.net" }
]
dependencies = [
    "aioquic>=0.9.0",
    "asyncio"
]

[project.urls]
Homepage = "https://github.com/gmarzot/moqt-python"
Repository = "https://github.com/gmarzot/moqt-python.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["moqt"]

