[project]
name = "aiomoqt"
dynamic = ["version"]
description = "Python asyncio implementation of the MoQT protocol"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Giovanni Marzot", email = "gmarzot@marzresearch.net" }
]
dependencies = [
    "asyncio>=3.4.3",
    "qh3>=1.2.0",
    "sortedcontainers>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/gmarzot/aiomoqt-python"
Repository = "https://github.com/gmarzot/aiomoqt-python.git"

[project.optional-dependencies]
test = [
    "pytest",
]

examples = [
    "argparse",
]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aiomoqt"]

[tool.setuptools_scm]

